examples/negative/type_errors/L1/10_add_bool_int.ob
MODULE AddBoolInt;

VAR b: BOOLEAN;
    i: INTEGER;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  b := TRUE;
  i := 4;
  b := b + i; ok := TRUE;
END AddBoolInt.
